# esp32-presence-sensor

./: .gitignore  README.md
firmware/: CMakeLists.txt  build.sh  clean.sh  debug.sh  flash.sh  menu.sh  monitor.sh  ota_image.sh  sdkconfig
firmware/main/: CMakeLists.txt  ld2402.c  ld2402.h  ld2402_defs.h  ld2402_v1.c  ld2410s.c  ld24xx.h  light_driver.c  light_driver.h  main.c  main.h  ota.c  ota.h
quirk/: presence1.py
